Add sharecrops page

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
             <li><a href="http://cybertalks.org" target="_blank">Community</a></li>
             <li><a href="https://github.com/cyberFund/cyberShares/wiki" target="_blank">Whitepaper</a></li>
             <li><a href="/explorer">Explorer</a></li>
+            <li><a href="/sharedrops">share<span style="color:blue; position:relative;"> • </span>Drops</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="http://cyber.fund" target="_blank">cyber <span style="color:red; position:relative;">•</span> Fund</a></li>
