--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@ h1{
   <br>
   <br>
   <br>
-  <h3 class="text-center">cyber•Shares distributed to investors and developers of leading crypto projects
+  <h3 class="text-center">cyber•Shares will be distributed to investors and developers of leading crypto projects
  <br>who understand industry the most <br><br> <a href="http://cybertalks.org/t/cyber-shares-distribution/159" target="_blank">How to redeem?</a> </h3>
   </div>
 <br>
@@ -118,7 +118,7 @@ h1{
   </div>
   <div class="col-md-2">
     <img class="logo" src="/images/maidsafe.png">
-    <h3>Maidsafe
+    <h3>MaidSafe
     </h3>
   </div>
   <div class="col-md-2">
@@ -128,12 +128,12 @@ h1{
   </div>
   <div class="col-md-2">
     <img class="logo" src="/images/next.png">
-    <h3>Next
+    <h3>NXT
     </h3>
   </div>
   <div class="col-md-2">
     <img class="logo" src="/images/bitshares.png">
-    <h3>Bitshares
+    <h3>BitShares
     </h3>
   </div>
   <div class="col-md-2">
@@ -196,7 +196,7 @@ h1{
     <br>
     <br>
     <br>
-    <a href="compare.cybershares.net" class="col-md-4; nounderline">
+    <a href="http://compare.cybershares.net" target="_blank" class="col-md-4; nounderline">
     <button type="button" class="btn btn-warning btn-lg btn-block; col-md-offset-4 col-md-4"><h2>Protoshares comparison</h2></button>
     </a>
    </div>
@@ -256,8 +256,8 @@ h1{
     <br>
     <br>
     <div>
-    <a href="/wallet" class="nounderline">
-    <button type="button" class="btn btn-warning btn-lg btn-block; col-md-offset-5 col-md-2"><h2>Invest now</h2></button>
+    <a href="#opportunities" class="nounderline">
+    <button type="button" class="btn btn-default btn-lg btn-block; col-md-offset-4 col-md-4"><h2>Endless opportunities</h2></button>
     </a>
       </div>
     </div>
@@ -267,17 +267,41 @@ h1{
 </div>
   <!-- end  -->
   <!-- start Products -->
-  <div id="products" class="container">
+  <div id="opportunities" class="container">
   <br>
   <div class="row">
     <div class="text-center">
       <h1>Endless business possibilities</h1>
       <br>
-      <p>We've prepared comprehensive analysis of emerging industry,
-      so you can better understand disruptive opportunities never existed before</p>
       <br>
-
-<iframe src="https://docs.google.com/presentation/d/1ZXY1jAow0l2ZXPZrbez1qXN8DV-LfpYZSD9IseJUG90/embed?start=false&loop=false&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h2>Cybernetic economy report 2015 coming soon</h2>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
       <br>
 </div>
@@ -342,6 +366,65 @@ h1{
 </div>
   <!-- end  -->
   <!-- Dream idea -->
+<div id="explore" class="container">
+  <br>
+  <br>
+  <br>
+<h1 class="text-center">Explore cyber<span style="color:yellow; position:relative; top:3px;">•</span>Shares</h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="text-center">
+    <div class="col-md-3">
+      <a href="http://paper.cyber.fund" target="_blank" class="clear">
+        <input type="button" value="Whitepaper" name="whitepaper" id="mc-embedded-whitepaper" class="button btn btn-default btn-lg btn-block">
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a href="/explorer" class="clear">
+        <input type="button" value="Explorer" name="explorer" id="mc-embedded-explorer" class="button btn btn-success btn-lg btn-block">
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a href="/sharedrops" class="clear">
+          <input type="button" value="Sharedrops" name="sharedrops" id="mc-embedded-sharedrops" class="button btn btn-danger btn-lg btn-block">
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a href="http://blog.cyber.fund" target="_blank" class="clear">
+          <input type="button" value="cyber•Blog" name="blog" id="mc-embedded-blog" class="button btn btn-warning btn-lg btn-block">
+      </a>
+    </div>
+  </div>
+    <br>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 </div>
 <div style="background-image: url('/images/social.jpg'); height: 900px; background-size: cover;">
   <br>
@@ -361,7 +444,7 @@ h1{
   <a href="http://cybertalks.org"><img src="/images/cybertalks.png" height="300px" width="300px" class="centered"></a>
   </div>
   <!-- End: Dream idea -->
-<div class="container">
+<div id="getcybershares" class="container">
   <br>
   <br>
   <br>
@@ -503,6 +586,15 @@ h1{
   <br>
   <br>
   </form>
+  <div class="text-center">
+  <br>
+  <br>
+  <br>
+  <p>created by <a href="http://cyber.fund">cyber<span style="color:red">•</span>Fund</a> team</p>
+  <br>
+  <br>
+  <br>
+</div>
 </div>
 
 {%- endblock -%}
