Add state of sharecrops

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@ h1{
   <br>
   <br>
   <h1 class="text-center" style="color:black;">
-    cyber <span style="color:yellow">•</span> Shares
+    cyber <span style="color:yellow; position:relative; top:3px;">•</span> Shares
   </h1>
   <h2 class="text-center"> Industry of polymorphic decentralized applications  </h2>
   <br>
@@ -81,7 +81,7 @@ h1{
   <br>
   <br>
  <h2 class="text-center" style="color:white; -webkit-text-stroke-width: 1px; text-shadow: 3px 0px 7px rgba(0, 0, 0, 1);">
-    40 000 shareholders and counting….
+    556 shareholders and counting….
   </h2>
   <br>
   <br>
@@ -115,31 +115,43 @@ h1{
     <img class="logo" src="/images/colored_coins.png">
     <h3>Colored coins
     </h3>
+    <br>
+    <p style="color:limegreen">Dropped</p>
+  </div>
+    <div class="col-md-2">
+    <img class="logo" src="/images/next.png">
+    <h3>NXT
+    </h3>
+    <br>
+    <p style="color:yellow">Soon</p>
+  </div>
+  <div class="col-md-2">
+    <img class="logo" src="http://forum.cyber.fund/uploads/default/55/afebd04839bf32aa.png">
+    <h3>Counterparty
+    </h3>
+    <br>
+    <p style="color:yellow">Soon</p>
   </div>
   <div class="col-md-2">
     <img class="logo" src="/images/maidsafe.png">
     <h3>MaidSafe
     </h3>
-  </div>
-  <div class="col-md-2">
-    <img class="logo" src="/images/ethereum.png">
-    <h3>Ethereum
-    </h3>
-  </div>
-  <div class="col-md-2">
-    <img class="logo" src="/images/next.png">
-    <h3>NXT
-    </h3>
+    <br>
+    <p style="color:yellow">Soon</p>
   </div>
   <div class="col-md-2">
     <img class="logo" src="/images/bitshares.png">
     <h3>BitShares
     </h3>
+    <br>
+    <p style="color:yellow">Soon</p>
   </div>
   <div class="col-md-2">
-    <img class="logo" src="/images/bitcoin.png">
-    <h3>Bitcoin
+    <img class="logo" src="/images/ethereum.png">
+    <h3>Ethereum
     </h3>
+    <br>
+    <p style="color:red">After launch</p>
   </div>
   </div>
   <br>
