--- a/templates/wallet.html
+++ b/templates/wallet.html
@@ -367,41 +367,49 @@
     </div>
   </div>
   <div class="text-center-container">
-  <br>
-  <br>
-  <h1 class="text-center">Interested in cyber <span style="color:yellow; position:relative; top:3px;">•</span> Wallet?</h1>
-  <br>
-  <br>
-  <br>
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-    <div class="form-inline">
-      <form action="/subscribe" method="post">
-        <div class="input-group-lg">
-          <input name="email" type="email" class="form-control" placeholder="{% if session.get('subscription') %}{{ session.get('subscription') }}{% else %}Your email{% endif %}"></input>
-          <br>
-          <br>
-        </div>
-
-        <div class="col-md-4"></div>
-          <div class="col-md-4">
-              <input class="btn btn-success btn-lg btn-block" type="submit" {% if session.get('subscription') %}disabled="disabled"{% endif %} value="Subscribe">
-          </div>
-        </form>
-        <div class="col-md-4"></div>
-      </div>
     <br>
     <br>
+    <h1 class="text-center">Get in touch</h1>
     <br>
     <br>
-    <h4 class="text-center">We're never spam you<h4>
+  <div id="mc_embed_signup" class="form-inline col-md-offset-4 col-md-4">
+  <form
+    action="//fund.us9.list-manage.com/subscribe/post?u=f49824401068400521a7f2e46&amp;id=1775bc0102"
+    method="post"
+    id="mc-embedded-subscribe-form"
+    name="mc-embedded-subscribe-form"
+    class="validate"
+    target="_blank"
+    novalidate
+  >
+  <div id="mc_embed_signup_scroll" class="form-inline">
+    <div class="mc-field-group input-group-lg">
+      <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Your email">
+    </div>
+    <div id="mce-responses" class="clear">
+      <div class="response" id="mce-error-response" style="display:none"></div>
+      <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;">
+      <input type="text" name="b_f49824401068400521a7f2e46_1775bc0102" tabindex="-1" value="">
+    </div>
     <br>
     <br>
-    <br>
+    <div class="clear">
+      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-success btn-lg btn-block">
     </div>
   </div>
 <br>
 <br>
+<h4 class="text-center">We're never spam you<h4>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
+
 
 {%- endblock -%}
