--- a/templates/index.html
+++ b/templates/index.html
@@ -336,7 +336,7 @@ h1{
     <br>
     <div class="text-center">
       <div class="col-md-4">
-      <img src="/images/create shares.png" class="img-circle" height="140px" width="140px">
+      <img src="/images/create_shares.png" class="img-circle" height="140px" width="140px">
       <br>
       <br>
       <br>
