--- a/templates/index.html
+++ b/templates/index.html
@@ -467,10 +467,10 @@ h1{
   <div class="text-center">
     <div class="col-md-4">
       <h2 class="text-center"> Buy <h2>
-    <h2> <a href="http://masterxchange.com">Masterxchange</a><h2>
-    <h2> <a href="counterwallet.co">Counterwallet</a><h2>
-    <h2> <a href="https://trade.secureae.com/#18349167062458849940">NXT</a><h2>
-    <h2> <a href="http://bitshares.org">Bitshares</a><h2>
+    <h2> <a href="https://masterxchange.com/market.php?trade=500&currency=colcfs" target="_blank">Masterxchange</a><h2>
+    <h2> <a href="http://www.blockscan.com/assetInfo/CYBERSHARES" target="_blank">Counterwallet</a><h2>
+    <h2> <a href="https://trade.secureae.com/#18349167062458849940" target="_blank">NXT</a><h2>
+    <h2> <a href="http://www.bitsharesblocks.com/assets/asset?id=CSHARES" target="_blank">Bitshares</a><h2>
     <br>
     <h2> <a href="http://cybertalks.org/t/how-to-buy-cyber-shares/242">How to buy?</a><h2>
     </div>
