Add total coins supply for Coinmarketcap listing

--- a/templates/explorer.html
+++ b/templates/explorer.html
@@ -132,7 +132,7 @@ h1{
     <td class="text-left">Counterparty placement</td>
     <td><small><a href="http://cybertalks.org/t/counterparty-cyber-shares-placement/187" target="blank">cyber•Talks<nobr> <nobr>thread</a></small></td>
     <td class="text-right">10<nobr> <nobr>000</td>
-    <td class="text-left"><small><a href="http://www.blockscan.com/txInfo/10880596" target="blank">http://cybertalks.org/t/counterparty-cyber-shares-placement/187</a></small></td>
+    <td class="text-left"><small><a href="http://www.blockscan.com/txInfo/10880596" target="blank">43c4aeaed0a1cc030c76bd37ae6d3c543f889bb35153e1df38397508672bc680</a></small></td>
     <td class="text-left">Counterparty</td>
   </tr>
   <tr>
