Add cyberShares drops

--- a/templates/sharedrops.html
+++ b/templates/sharedrops.html
@@ -25,7 +25,39 @@ h1{
     <th class="text-center">Details</th>
   </tr>
   <tr>
-    <td class="text-left"><a href="https://www.coinprism.info/asset/AexRXvf7Gw5ZBaAHWR27RqAeuANmL1pGqC">cyber<span style="color:yellow; position:relative;"> • </span>Talks</a></td>
+    <td class="text-left"><a href="https://nxtblocks.info/#section/assets_exchange/market/18349167062458849940">cyber<span style="color:yellow; position:relative;"> • </span>Shares NXT</a></td>
+    <td class="text-left">Sharedrop to NXT community</td>
+    <td>10%</td>
+    <td class="text-center">December 2014</td>
+    <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
+    <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
+  </tr>
+  <tr>
+    <td class="text-left"><a href="http://www.blockscan.com/assetInfo/CYBERSHARES">cyber<span style="color:yellow; position:relative;"> • </span>Shares Counterparty</a></td>
+    <td class="text-left">Sharedrop to Counterparty community</td>
+    <td>0.2%</td>
+    <td class="text-center">December 2014</td>
+    <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
+    <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
+  </tr>
+  <tr>
+    <td class="text-left">cyber<span style="color:yellow; position:relative;"> • </span>Shares Omni</td>
+    <td class="text-left">Sharedrop to MaidSafe community</td>
+    <td>10%</td>
+    <td class="text-center">January 2015</td>
+    <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
+    <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
+  </tr>
+  <tr>
+    <td class="text-left"><a href="http://www.bitsharesblocks.com/assets/asset?id=CSHARES">cyber<span style="color:yellow; position:relative;"> • </span>Shares BTS</a></td>
+    <td class="text-left">Sharedrop to BitShares community</td>
+    <td>10%</td>
+    <td class="text-center">January 2015</td>
+    <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
+    <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
+  </tr>
+  <tr>
+    <td class="text-left"><a href="https://www.coinprism.info/asset/AexRXvf7Gw5ZBaAHWR27RqAeuANmL1pGqC">cyber<span style="color:orange; position:relative;"> • </span>Talks</a></td>
     <td class="text-left">Community of crypto profs</td>
     <td>10%</td>
     <td class="text-center">January 2015</td>
@@ -39,6 +71,14 @@ h1{
     <td class="text-center">February 2015</td>
     <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
     <td class="text-left"><a href="http://cybershares.net/wallet">cybershares.net/wallet</a></td>
+  </tr>
+  <tr>
+    <td class="text-left">cyber<span style="color:yellow; position:relative;"> • </span>Shares Ethereum</td>
+    <td class="text-left">Sharedrop to Ethereum community</td>
+    <td>10%</td>
+    <td class="text-center">March 2015</td>
+    <td class="text-center"><a href="http://cyber.Fund">cyber<span style="color:red; position:relative;"> • </span>Fund</td>
+    <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/AbhBFwWFpZzFMsBakZbDzUTYv67t9rThaK">cyber<span style="color:red; position:relative;"> • </span>Fund</a></td>
