Add stage of asset to sharedrop list

--- a/templates/sharedrops.html
+++ b/templates/sharedrops.html
@@ -17,15 +17,17 @@ h1{
 <br>
 <table class="table table-hover">
   <tr>
-    <th class="text-center">Asset</th>
+    <th class="text-center"><a href="#" data-toggle="tooltip" title data-original-title="Link to digital asset">Asset</a></th>
+    <th class="text-center"><a href="#" data-toggle="tooltip" title data-original-title="Current product phase">Stage</a></th>
     <th class="text-center">Elevator Pitch</th>
-    <th class="text-center">Volume</th>
+    <th class="text-center"><a href="#" data-toggle="tooltip" title data-original-title="Sharedrop revenue to cyber•Shares holders">Volume</a></th>
     <th class="text-center">When</th>
     <th class="text-center">Team</th>
     <th class="text-center">Details</th>
   </tr>
   <tr>
     <td class="text-left"><a href="https://nxtblocks.info/#section/assets_exchange/market/18349167062458849940">cyber<span style="color:yellow; position:relative;"> • </span>Shares NXT</a></td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Sharedrop to NXT community</td>
     <td>10%</td>
     <td class="text-center">December 2014</td>
@@ -34,6 +36,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="http://www.blockscan.com/assetInfo/CYBERSHARES">cyber<span style="color:yellow; position:relative;"> • </span>Shares Counterparty</a></td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Sharedrop to Counterparty community</td>
     <td>0.2%</td>
     <td class="text-center">December 2014</td>
@@ -42,6 +45,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">cyber<span style="color:yellow; position:relative;"> • </span>Shares Omni</td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Sharedrop to MaidSafe community</td>
     <td>10%</td>
     <td class="text-center">January 2015</td>
@@ -49,7 +53,8 @@ h1{
     <td class="text-left"><a href="http://cybertalks.org/t/cyber-shares-distribution/159">cybertalks.org/thread</a></td>
   </tr>
   <tr>
-    <td class="text-left"><a href="http://www.bitsharesblocks.com/assets/asset?id=CSHARES">cyber<span style="color:yellow; position:relative;"> • </span>Shares BTS</a></td>
+    <td class="text-left"><a href="http://www.bitsharesblocks.com/assets/asset?id=CSHARES">cyber<span style="color:yellow; position:relative;"> • </span>Shares BitShares</a></td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Sharedrop to BitShares community</td>
     <td>10%</td>
     <td class="text-center">January 2015</td>
@@ -58,6 +63,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/AexRXvf7Gw5ZBaAHWR27RqAeuANmL1pGqC">cyber<span style="color:orange; position:relative;"> • </span>Talks</a></td>
+    <td class="text-center"><span class="label label-primary">Commitment</span></td>
     <td class="text-left">Community of crypto profs</td>
     <td>10%</td>
     <td class="text-center">January 2015</td>
@@ -66,6 +72,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/ATqTR8pQ9vsaewvtCwGukq74RdPxjtGoz8">cyber<span style="color:green; position:relative;"> • </span>Wallet</a></td>
+    <td class="text-center"><span class="label label-warning">Concept</span></td>
     <td class="text-left">Extendable crosschain web wallet</td>
     <td>50%</td>
     <td class="text-center">February 2015</td>
@@ -74,6 +81,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">cyber<span style="color:yellow; position:relative;"> • </span>Shares Ethereum</td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Sharedrop to Ethereum community</td>
     <td>10%</td>
     <td class="text-center">March 2015</td>
@@ -82,6 +90,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/AbhBFwWFpZzFMsBakZbDzUTYv67t9rThaK">cyber<span style="color:red; position:relative;"> • </span>Fund</a></td>
+    <td class="text-center"><span class="label label-primary">Commitment</span></td>
     <td class="text-left">First distributed investment and development fund</td>
     <td>1%</td>
     <td class="text-center">March 2015</td>
@@ -90,6 +99,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/ATpcEPBBCbK46DrHPm9H9QnzkKDXkczSXf">cyber<span style="color:blue; position:relative;"> • </span>Paper</a></td>
+    <td class="text-center"><span class="label label-success">Validation</span></td>
     <td class="text-left">Cyber entreupreneurs bible</td>
     <td>30%</td>
     <td class="text-center">April 2015</td>
@@ -98,6 +108,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left"><a href="https://www.coinprism.info/asset/ANQCiUSHfcmrWM4x2Xh3PsyBtVqdumkuE9">cyber<span style="color:purple; position:relative;"> • </span>Pie</a></td>
+    <td class="text-center"><span class="label label-warning">Concept</span></td>
     <td class="text-left">Intelligent trustless investment portfolio</td>
     <td>10%</td>
     <td class="text-center">June 2015</td>
@@ -106,6 +117,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">play<span style="color:#C62828; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Games & entertainment</td>
     <td>10%</td>
     <td class="text-center">July 2015</td>
@@ -114,6 +126,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">robotics<span style="color:#AD1457; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Consumer and production robotics</td>
     <td>10%</td>
     <td class="text-center">August 2015</td>
@@ -122,6 +135,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">indigo<span style="color:#283593; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Opportunities for indigo kids</td>
     <td>10%</td>
     <td class="text-center">4Q 2015</td>
@@ -130,6 +144,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">quantum<span style="color:#6A1B9A; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Computing electronics</td>
     <td>10%</td>
     <td class="text-center">4Q 2015</td>
@@ -138,6 +153,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">circle<span style="color:#4527A0; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Consumer finance and telecom</td>
     <td>10%</td>
     <td class="text-center">4Q 2015</td>
@@ -146,6 +162,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">dark<span style="color:#1565C0; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Privacy and anonymity</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -154,6 +171,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">brain<span style="color:#0277BD; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Artificial intelligence</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -162,6 +180,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">satoshi<span style="color:#00838F; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Bitcoin infrustructure</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -170,6 +189,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">spaceX<span style="color:#00695C; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Space exploration</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -178,6 +198,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">nation<span style="color:#2E7D32; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Next generation governance</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -186,6 +207,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">3dprint<span style="color:#558B2F; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Inorganic printing</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -194,6 +216,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">neuro<span style="color:#9E9D24; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Computer-brain interfaces</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -202,6 +225,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">tesla<span style="color:#F9A825; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Energy</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -210,6 +234,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">transport<span style="color:#FF8F00; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Transportation systems</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -218,6 +243,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">chain<span style="color:#EF6C00; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Data Science and blockchains</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -226,6 +252,7 @@ h1{
   </tr>
   <tr>
     <td class="text-left">color<span style="color:#D84315; position:relative;"> • </span>Fund</td>
+    <td class="text-center"><span class="label label-default">Idea</span></td>
     <td class="text-left">Formal agreements</td>
     <td>10%</td>
     <td class="text-center">2016</td>
@@ -280,6 +307,11 @@ h1{
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
+    <script type="text/javascript">
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 {%- endblock -%}
