--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@ h1{
     <h3>Colored coins
     </h3>
     <br>
-    <p style="color:limegreen">Dropped</p>
+    <p style="color:limegreen">Distributed</p>
   </div>
     <div class="col-md-2">
     <img class="logo" src="/images/next.png">
@@ -298,7 +298,7 @@ h1{
       <br>
       <br>
       <br>
-      <h2>Cybernetic economy report 2015 coming soon</h2>
+      <h2>Cybernetic economy report 2014 coming soon</h2>
       <br>
       <br>
       <br>
