Sharedrops now main page
- Fixes
- Add news

--- a/templates/explorer.html
+++ b/templates/explorer.html
@@ -72,7 +72,7 @@ h1{
     <br>
     <h2> <a href="https://www.blockscan.com/assetInfo/CYBERSHARES" target="blank">Blockscan</a><h2>
   </div>
-<div class="clearfix visible-xs-block"></div>
+<div class="clearfix"></div>
 <div class="text-center">
 <br>
 <br>
